recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:5: error: not found: value liste
    liste = l.head::butLast(l.tail)
    ^