recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if (l.tail==Nil) { return l}
  else	{
    liste = l.head::butLast(l.tail)
    
  }
}